Style guide change
Modified the names of all constants to be consistent with Java style guides. Changed from using the internal implementation of Base64 to Apache commons.